--- a/speak.html
+++ b/speak.html
@@ -51,7 +51,7 @@
             ['B#3', 'E#3', 'G3', 'F3', 'E3', 'F3', 'A3', 'B#3', 'G3', 'F3', 'E3'],
             ['A2', 'B2', 'C#2', 'G#2', 'A#2', 'D2', 'E2', 'F#2'],
         ];
-        const harmonizationIntervals = [0,3,5,7,9];
+        const harmonizationIntervals = [0, 3, 5, 7, 9];
         const backgroundColors = ['#ffcccc', '#ccffcc', '#ccccff', '#ac3a7d', '#acb87a'];
         const textColors = ['#ffffff', '#000000', '#f2f2f2'];
         const synth = new Tone.Synth().toDestination();
